Added error message in case of error

--- a/src/main/resources/templates/jsonpath.html
+++ b/src/main/resources/templates/jsonpath.html
@@ -25,7 +25,7 @@
             <textarea rows="40" th:field="*{inputJson}"></textarea>
             <textarea rows="40" th:field="*{outputJson}"></textarea>
         </div>
-
+        <code th:text="*{errorMessage}"></code>
     </form>
 </body>
 </html>
